# ChangeLog for app-admin/killproc
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/killproc/ChangeLog,v 1.18 2009/09/04 15:31:21 jer Exp $

*killproc-2.13 (04 Sep 2009)

  04 Sep 2009; Jeroen Roovers <jer@gentoo.org> +killproc-2.13.ebuild,
  +files/killproc-2.13-makefile.patch:
  Version bump. Respect CFLAGS (bug #239860), LDFLAGS.

  03 Jan 2009; Christoph Mende <angelos@gentoo.org> killproc-1.12-r2.ebuild:
  QA: Respect CC, force at least -O1 (bug 239860)

  02 Nov 2008; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  metadata.xml:
  Reassigned package to maintainer-needed.

  02 Nov 2008; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  metadata.xml, killproc-1.12-r2.ebuild:
  Removing eradicator as a maintainer since he was retired. Quoted a var.

  21 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  08 Dec 2006; Elfyn McBratney <beu@gentoo.org> killproc-1.12-r2.ebuild:
  Kill DEPEND (both libc and sed are part of system).

  23 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org>
  killproc-1.12-r2.ebuild:
  Stable amd64

  29 Jun 2004; Aron Griffis <agriffis@gentoo.org> killproc-1.12-r2.ebuild:
  add sed-4 dep

  15 Jun 2004; Jeremy Huddleston <eradicator@gentoo.org> +metadata.xml:
  Added ~amd64.

  12 Mar 2004; Michael Sterrett <mr_bones_@gentoo.org>
  killproc-1.12-r2.ebuild:
  Don't assign default to S; header fix

*killproc-1.12-r2 (1 Feb 2002)

  09 Feb 2003; Seemant Kulleen <seemant@gentoo.org> killproc-1.12-r2.ebuild :

  Changed sed expression delimiters to : instead of /, closing bug #15006 by
  Blu3 <david+gentoo.org@blue-labs.org>

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
  29 Jul 2002; Calum Selkirk <cselkirk@gentoo.org> killproc-1.12-r2.ebuild :

  Added an if [ ${ARCH} = "x86" ] for -m486 flag > Makefile to make non arch
  dependent.
  Added RDEPEND
  Added RDEPEND.
