@@ -1,19 +1,21 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 AUX killproc-2.13-makefile.patch 1313 RMD160 350500d896f3faf59dcac4a86b1b345caa9a24e0 SHA1 996981a66d7a1b581722cebe2339cc42e6d3cd6a SHA256 215d87ca38d9f60ad7bdf3aedd523281102c2ea77f3089b1ee180c16ed4ff829
 DIST killproc-1.12.tar.gz 26414 RMD160 e64f1319b66645d200de947b97bf50df704a03f2 SHA1 199e6aead7476b927bf0c9f483bc982c6a6eddb8 SHA256 7ee58e80467e40c659e0a4aebd6ba28c6ef675679d33e98bd6a9f8e9df632f6e
 DIST killproc-2.13.tar.gz 37953 RMD160 de950de5bc0d335f7255edcc7e765694dbc736f6 SHA1 d51bb2bbaaee35eac238cb7cc49ae62321e611ee SHA256 090590f5ab24559889bd134f38258d5ea567590098580c2345ca8183fb9c3e78
 EBUILD killproc-1.12-r2.ebuild 823 RMD160 5d70566a781971f5219b00ad46a53d00ba049ff8 SHA1 945176f263d87a85786a22a78add60c91acdf4e2 SHA256 30e68655ac3bb03993d3410eeb9ffdeaa7da359be7819926ae1bea558201d591
-EBUILD killproc-2.13.ebuild 816 RMD160 26b2a33bd9345d9a48c65a9827d42b6542e32967 SHA1 417ee2bbd489f3e738ec91944057ddf69d9b329a SHA256 1a299a222df1d234ea2a14d2c4b0dfaf6ffe64910d389637605bb278d8241986
-MISC ChangeLog 2408 RMD160 8307a496c6c74c893e475a003632cbd4f9cca645 SHA1 dcfbd19c3d3b4f66b31a64d0e561b9d8b40a6542 SHA256 ea62b1e76aa15dfff30d7ed5edd931ddcdb2497d037c37df7a199436ad67a5b8
+EBUILD killproc-2.13.ebuild 809 RMD160 9f5edafb6353ca00e8247899dc66d68c4e54f429 SHA1 0bf15d598444baf0552f5e5576826f1845fddcbc SHA256 9740216102779e7233641d19335aafaebcbc451eb0b97a2115deedb2ca97d563
+MISC ChangeLog 2516 RMD160 95fc160e83f4b9d2459ac15c803c2cf41275f4c0 SHA1 b188c4cbe217947075454b46ce04d0a369241948 SHA256 4a1553905837302dd7ccc16941eec0844670b92dbb16a5667e7f19c87bd21850
 MISC metadata.xml 237 RMD160 7594129f0268908166a8f3a7a941ec3605ada3c4 SHA1 a28350e57b8d61a420d295569afa145b87377f28 SHA256 b430ceb3dc409ed776a2dfbc1b20e77f0bf31c38322e13e1e746dee625ad5b6d
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.18 (GNU/Linux)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iJwEAQEIAAYFAk589RQACgkQfXuS5UK5QB0i5AQAhMA+uCHJWqWvK7oZUY6Kjpk0
-MhWcrwiSun94dr0NnuYGDutjGdVsAS8XaFrMOk16gEfV2jMROibNIFAqVerMXW0X
-UBcDHdJE8bAO7zMY0V/iAqdJnnaJhjutqtWEHxQbCPg+/esWVDTawI1stooRp579
-RdEAw4yCjafUJdM+dJk=
-=HCnf
+iQEcBAEBCgAGBQJPKtSmAAoJEOTDgjZ80txdLBIIAK/u8hH1Jhk4BZXaNUApvDv0
+OJ9ROBUKeHsyicWfr5YOXPTpObK1RiY5lQp4h/Vvh+myiXdJs4eM+ZEvgewS4vMZ
+WmyUBjukbvYZoLoAYBsWpuO8BomxGBqJfzZxrmh/OJWGugZGU6Fj8KFTUnh2HEyi
+gHkd2J9upSri6eSUGVXKY5ebt72b+KDbSi8ZU7/qMUuJJxHqBVQFw4I86mIE0iAq
+Et5YgsXYCm9VGDj4/gMr47hFWgEKNR8Ageim5HkVZjGkuaacA/tfW5jsOswxLEhM
+sjYRMqHo/wbnF/TlqnNl3W4LUqgO50LWGnlLYFR+5FVo2BykIZstgTYv+Ij0M2Q=
+=0jTq
 -----END PGP SIGNATURE-----
