@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 AUX lsat-0.9.5-gentoo.patch 737 RMD160 125c883dd01708b263ac4ee7aaf08ee41742e993 SHA1 623cb2a3e3cf96943cf2ad66e9b3744437654cb5 SHA256 b4437e517e4f1f9cf484dadbdc796d10197e3b25ae52d266bd88b25b5ff9c87d
 AUX lsat-0.9.6-gentoo.patch 1484 RMD160 2349dfdc9754c97b85fe9b37366ee5bdd2e2c85b SHA1 f8e8b0fab26b9ac3232a0c36b744cc862bcf926b SHA256 f76f127f56139d8d8cf20ead7dd3e72b0a91b90dc85c4f5730bbb5388b35dcca
@@ -10,15 +10,17 @@ DIST lsat-0.9.6.tgz 74460 RMD160 47f7a5840af055b49536e7f98756a898ed100d13 SHA1 c
 DIST lsat-0.9.7.1.tgz 86077 RMD160 b5f529a92898709b75a8062f918b12463f177ec1 SHA1 af4649f554107275aba8a7a84e73cee53e8abc90 SHA256 825b4578e7e90f937c492722801fd6b35785264747cd6e7e45bded2545d2d956
 EBUILD lsat-0.9.5.ebuild 836 RMD160 61c7c342cdd3232fac339e49163ec1c95c3f8932 SHA1 9f00ca2b124f256791ab90c4f560707350ec7cf0 SHA256 69451fd37a4aeebca055e2b5be450bc8de1846a7bd6cb4610c27cd2f4abfce3b
 EBUILD lsat-0.9.6.ebuild 926 RMD160 33dedb1c396eadb013351a2b7023f44a5711ae7f SHA1 e1e7fb91d3b6932022614409b1c06d1e0b0aba35 SHA256 0b0683b400af2743d41b620a860c438bbd4a78abab55716daedfe9d322b88e1d
-EBUILD lsat-0.9.7.1-r1.ebuild 1146 RMD160 1ca6eb8f9ed90f03bbd7e3198e6d7716cfa71243 SHA1 640f04de8caba1c7757dbd2b9a1c1ad4f207b430 SHA256 959f1d883e8a278134ca17db3ae8eabee3c17e4fb39bbb54d8abb576260bfff1
-MISC ChangeLog 3397 RMD160 3160a57f6fb5026c84cd89b6218b45c683a2c66c SHA1 e567dd50fa8a85f312b07716220b6c8a0e4658f9 SHA256 a857113a57fb81db449d1c6ce8e4b9df9e9123efa7c75c06cb04e0517049ed54
+EBUILD lsat-0.9.7.1-r1.ebuild 1145 RMD160 e66ed8e2126ab4e0f8bf154c3d6742f9c6706efa SHA1 dec106cd152bbe0746d6f81073b0df19802a48db SHA256 cfc2ce0b4a6a2f6603689c9c23df4da1a9088661df21138c8d31c8cd9c18778b
+MISC ChangeLog 3507 RMD160 f9531b75680df981bc50f49c19cf4fbe63c00606 SHA1 73ed28747aca6699613b0ab0b553b462aae1603c SHA256 83d43ecf075844e9ed368b371567285fbd34e80845c748a6af14444e7e974c03
 MISC metadata.xml 635 RMD160 77eff18b41f1cee296411c089eb178e7f31f467b SHA1 d784e6f78cce8daa3dce8673bb6b4cda105e35a6 SHA256 0c2676367040fba1666c664fafd93f36776f3fa04c604759df8ee48fef3d563c
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.18 (GNU/Linux)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iJwEAQEIAAYFAk589RQACgkQfXuS5UK5QB2PXgQArC2r/gKZ5iXzRb5sPtBU40al
-34mbheEEjSrvFQVz/aPS9zGywA2w+KwIhwvQhNyvz/ijz7DuN0MKlaWZ2foi23xI
-A41Criq5pOmuc8yb5AtvEWGKkxl+0DoKzcAuWkBe7qK+dK2ctik8Yzb2rgNkTRWH
-oQ02ZGslLc3cw1lTDaI=
-=Cped
+iQEcBAEBCgAGBQJPKtTHAAoJEOTDgjZ80txd/UQH/319JQ3aULLwGpTvczkObD/G
+L9dxLUwhsmSqAcu3ViaUsEK8OYm2vem4La9PqTHAf2soTArDXHNUDxpSDvTKohev
+UbrQk6afjlGeMGkmvoaGqldrYJH7+uRmtTn4kwQCQp90NvQdY2alPkkGlIyqQHNC
+d8MsJ/zZq4I1qJn/SjOKpgc7WBSEBvZshUSJLwOWXaNgpKjMJOWoN52mg8YX0EgC
+bijI7SOGffrxaHBRO8g9b4tZJIJPPCW72N5orAx+hvLWRiKDCms6YunP+WVxssME
+lOEdV7c9zrmVplJXP/J+Y7z3bD/bpYyzbcqKN2disRRXRncf5GjUNRqzpc1oZYA=
+=PPNC
 -----END PGP SIGNATURE-----
