@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 AUX tenshi-0.10-solo-queue-escalation.patch 2420 RMD160 d195abc6821a8ef327ee907129ade69fa2dccca7 SHA1 699452d1d68120343df1d59fb11ddc467507feba SHA256 323741d45b183d3dee0a54c5aeaf8c8baf7d8f1bf0343a46cf5facba3d879101
 AUX tenshi-0.10-warn-logfile.patch 1011 RMD160 4ff09828195d429a69ae9490966d3048dbc071e2 SHA1 598ac57e182de379fe6724ef7b1a29a6889969f8 SHA256 fab40dee83dbc8d6bab82035d98bd0067c63a3174016483ced9a33ab9092ca9d
@@ -9,15 +9,17 @@ AUX tenshi-remove-timezone-cache.patch 369 RMD160 c164cfdf5c0c4e7be1e4a252759de7
 DIST tenshi-0.10.tar.gz 26131 RMD160 27a3dc2e0fc7e6790497ddfa0dc6bd85cafd7316 SHA1 998ecafd263af9ee54d1494cd973a91ec734ea2d SHA256 b57dd0c23f222c28d017394c57277d1e1077fddcfd6b5930bc0a43b4f082b432
 DIST tenshi-0.12.tar.gz 28467 RMD160 096aad64184b58ec5276f7cab80d45626eff30da SHA1 0920db96c17d8c2eee4b4adb06ac359cf4c8376a SHA256 953bbad01cb03674ab6135b70f707467ccd55dd1b8cb7257f1f49473d7767920
 EBUILD tenshi-0.10-r3.ebuild 1660 RMD160 5b87fadc79d5214834e401f8e729d49da077945a SHA1 0f4576c12e858f696514341549e36ae3a63ca3a9 SHA256 c46e9f299447f65c8cab34d42c6199194feddc858c4f94aefc24fdd01282dd16
-EBUILD tenshi-0.12.ebuild 1422 RMD160 4de64aaf1c49504ee1b70520a7a7aa1d6a5ea71c SHA1 e45fd76de9c448dcee8f0ca73c20292953833f39 SHA256 17fa3498f2c5e5ab53d993868d9c01ddf26fd7b73258ddf1ffc7d6d0cc079f52
-MISC ChangeLog 8496 RMD160 33335da0e7370c1bf1bca9f3ffb39879adb311e2 SHA1 bb5e4441e6b58d9ead7d93dda111a2bfdfa17ba9 SHA256 252ae9aa9b6591a8fb31e86aacf0c5a4a16cd83df252a1facd2f8a91064acd4a
+EBUILD tenshi-0.12.ebuild 1421 RMD160 ad817cbdccfc66b38d2b02d7afe8ac79b3487862 SHA1 db5d87120f055e4599a8ac7d31d413d52ee3e7d3 SHA256 1f78acc5b92bf6acbee09327da2e0b4651dd01521c5f6e232d815fa906e687c8
+MISC ChangeLog 8602 RMD160 8d40b1d7f9aa6758683962629bf736a26326941f SHA1 a1cb7831b2f694f4805388e2d7d52978ecf02617 SHA256 7816c4df5efd4f6fb160aa94163e3fe04c9f042ceb51b14d622ec03f510dcf74
 MISC metadata.xml 304 RMD160 4d6bdf2665a8c4d73424bab8d5818edec890c376 SHA1 7f95e1e3427e066a336c3a763e0af424bf06806f SHA256 da3243235870069b2d41ed19c9f160638eaa07ac6f614fa3d109dc5d61a5c232
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.18 (GNU/Linux)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iJwEAQEIAAYFAk589RYACgkQfXuS5UK5QB0TuwP/dc1OMsSuuRev+tGjwSkgUOd8
-VC4YtzD1UdNPlqSJbXlw2KguH+jKvDN8rsFeDEu/TFzlxEYf5KTs0Qz6bqk9d2G7
-JmmzoIapvccs24PmTkGsoPlTbOwkf44kfq4ri5GSXSzFji1dOk/Itt5l0IvlEh4Q
-uMPVBEL4+5vnVM9LLGc=
-=v/de
+iQEcBAEBCgAGBQJPKtTiAAoJEOTDgjZ80txdpQkH/ivb4enzh87+zhwuo2zJaVEp
+DR4jJwvI9IlGxBas8685pgxERcRNxqIJ3lv+Mh6gpuXUKZZucXIsOSkF+iJ6xiw3
+8b7itjrDds8gz43vrVrR7vqRauNSG4EBWMeXK07y5QdRfEdl6w4u1rRfkFX2u0Np
+KYQaV91XRSr2dcbrv4zO+Sr5etdtBJdeC09AOjMRXlhe0qEpjF0dqP8RNtiZIZwQ
+PiEnAdgnmr+slfq55QE4jXh5u+SDrv5qN4RRbT2tVC2bwmVwkvoZEMRZ+FUbjBGM
+M0NLrcYFU4eUcaoOY3uF5JTpBIIRYe3QdZ5yIrMkUkkIJBqg7yyywScFz2ZqrvM=
+=hWQ/
 -----END PGP SIGNATURE-----
